manifest v2->v3 updt deprecated fnctns  & contacts

--- a/src/popup.html
+++ b/src/popup.html
@@ -86,7 +86,7 @@
             <li>
                 <div class='nestburger'>Contact</div>
                 <hr>
-                <div class='sibling'><a href="mailto:garydavenport73@gmail.com">mailto:garydavenport73@gmail.com</a></div>
+                <div class='sibling'><a href="mailto:tangysoft@gmail.com">mailto:tangysoft@gmail.com</a></div>
             </li>
             <li>
                 <div class='nestburger'>About</div>
