--- a/src/popup.html
+++ b/src/popup.html
@@ -101,6 +101,8 @@
                             <ul id='toolbar'>
                                 <li>&larr; &Tab; Move dock to left.</li>
                                 <li>&rarr; Move dock to right.</li>
+                                <li>&uarr; Map scrolls up with page.</li>
+                                <li>&darr; Map stays fixed when scrolling.</li>
                                 <li>+ Zoom in on map.</li>
                                 <li>- Zoom out on map.</li>
                                 <li>&diams; Make toolbar solid.</li>
